refactor(manage-billing-view): change binding to apply proper price formatting

--- a/Views/ManageBillingView.axaml
+++ b/Views/ManageBillingView.axaml
@@ -374,7 +374,7 @@
                                                                                     <TextBlock 
                                                                                         FontSize="35"
                                                                                         FontWeight="Bold"
-                                                                                        Text="{CompiledBinding Price}"
+                                                                                        Text="{CompiledBinding FormattedPrice}"
                                                                                         VerticalAlignment="Bottom" />
                                                                                     <TextBlock
                                                                                         Classes="Caption Muted"
