--- a/Views/ProductPurchaseView.axaml
+++ b/Views/ProductPurchaseView.axaml
@@ -76,7 +76,7 @@
                                     shadui:ControlAssist.ShowProgress="{CompiledBinding IsSearchingCustomer}"
                                     shadui:ControlAssist.Height="40"
                                     Classes="Clearable"
-                                    Text="{CompiledBinding SearchStringResult, Mode=TwoWay}"
+                                    Text="{CompiledBinding CustomerSearchStringResult, Mode=TwoWay}"
                                     FontSize="15"
                                     Watermark="Search customers...">
                                     <TextBox.InnerRightContent>
@@ -186,10 +186,10 @@
                             <TextBox
                                 Width="400"
                                 HorizontalAlignment="Left"
-                                shadui:ControlAssist.ShowProgress="{CompiledBinding }"
+                                shadui:ControlAssist.ShowProgress="{CompiledBinding IsSearchingProduct}"
                                 shadui:ControlAssist.Height="40"
                                 Classes="Clearable"
-                                Text="{}"
+                                Text="{CompiledBinding ProductSearchStringResult}"
                                 FontSize="15"
                                 Watermark="Search products..">
                                 <TextBox.InnerRightContent>
