--- a/Views/ProductPurchaseView.axaml
+++ b/Views/ProductPurchaseView.axaml
@@ -277,6 +277,78 @@
                                     </DataTemplate>
                                 </ItemsControl.ItemTemplate>
                             </ItemsControl>
+
+                            <!-- Package Items -->
+                            <ItemsControl 
+                                ItemsSource="{CompiledBinding PackageList}"
+                                IsVisible="{CompiledBinding PackageList.Count}">
+                                <ItemsControl.ItemsPanel>
+                                    <ItemsPanelTemplate>
+                                        <UniformGrid Columns="4" RowSpacing="30" ColumnSpacing="30" />
+                                    </ItemsPanelTemplate>
+                                </ItemsControl.ItemsPanel>
+                                <ItemsControl.ItemTemplate>
+                                    <DataTemplate>
+                                        <shadui:Card Width="330" Height="390">
+                                            <StackPanel>
+                                                <shadui:CardTitle 
+                                                    Content="{CompiledBinding Title}" FontSize="18"
+                                                    FontWeight="Bold" />
+                                                <shadui:CardDescription Content="{CompiledBinding Description}" />
+                                                <StackPanel Orientation="Horizontal" Margin="0,20,0,0">
+                                                    <TextBlock 
+                                                        FontSize="35" 
+                                                        FontWeight="Bold"
+                                                        Text="{CompiledBinding FormattedPrice}"
+                                                        VerticalAlignment="Bottom" />
+                                                    <TextBlock 
+                                                        Classes="Caption Muted" FontSize="17"
+                                                        FontWeight="Medium" Text="{CompiledBinding PriceUnit}"
+                                                        VerticalAlignment="Center" />
+                                                </StackPanel>
+                                                <StackPanel>
+                                                    <ItemsControl ItemsSource="{CompiledBinding Features}">
+                                                        <ItemsControl.ItemTemplate>
+                                                            <DataTemplate>
+                                                                <StackPanel Orientation="Horizontal" Spacing="10">
+                                                                    <Svg 
+                                                                        Width="24" 
+                                                                        Height="24"
+                                                                        VerticalAlignment="Center" Margin="0,4"
+                                                                        Path="avares://AHON_TRACK/Assets/ManageBillingView/check-badge-icon.svg" />
+                                                                    <TextBlock
+                                                                        Text="{CompiledBinding }" 
+                                                                        FontSize="14"
+                                                                        Margin="0,4" VerticalAlignment="Center" />
+                                                                </StackPanel>
+                                                            </DataTemplate>
+                                                        </ItemsControl.ItemTemplate>
+                                                    </ItemsControl>
+
+                                                    <Button 
+                                                        Classes="Primary" 
+                                                        HorizontalAlignment="Center"
+                                                        Padding="65,0" 
+                                                        Margin="0,30,0,0">
+                                                        <StackPanel Orientation="Horizontal">
+                                                            <Svg 
+                                                                Width="18" 
+                                                                Height="18" 
+                                                                Margin="0,0,10,0"
+                                                                VerticalAlignment="Center"
+                                                                Path="avares://AHON_TRACK/Assets/ProductPurchaseView/shopping-cart-icon.svg" />
+                                                            <TextBlock 
+                                                                Text="Add to Cart" 
+                                                                Foreground="White"
+                                                                VerticalAlignment="Center" />
+                                                        </StackPanel>
+                                                    </Button>
+                                                </StackPanel>
+                                            </StackPanel>
+                                        </shadui:Card>
+                                    </DataTemplate>
+                                </ItemsControl.ItemTemplate>
+                            </ItemsControl>
                         </StackPanel>
                     </StackPanel>
                 </shadui:Card>
